--- a/my_html_workbook_2025.html
+++ b/my_html_workbook_2025.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My HTML Workbook</title>
+</head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+  <h1>Welcome to My HTML Workbook</h1>
+  <p>This page will contain all my HTML5 workshop tasks.</p>
 </body>
 </html>
+
+<h2>My First Form</h2>
+
+<form action="/action_page.php" method="get">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" placeholder="Enter your first name"><br><br>
+
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" placeholder="Enter your last name"><br><br>
+
+  <input type="submit" value="Submit">
+</form>
