--- a/my_html_workbook_2025.html
+++ b/my_html_workbook_2025.html
@@ -22,3 +22,19 @@
 
   <input type="submit" value="Submit">
 </form>
+
+<h2>Favorite Language</h2>
+
+<form action="/action_page.php" method="get">
+  <input type="radio" id="html" name="fav_language" value="HTML">
+  <label for="html">HTML</label><br>
+
+  <input type="radio" id="css" name="fav_language" value="CSS">
+  <label for="css">CSS</label><br>
+
+  <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+  <label for="javascript">JavaScript</label><br><br>
+
+  <input type="submit" value="Submit">
+</form>
+
