--- a/my_html_workbook_2025.html
+++ b/my_html_workbook_2025.html
@@ -8,48 +8,33 @@
 <body>
   <h1>Welcome to My HTML Workbook</h1>
   <p>This page will contain all my HTML5 workshop tasks.</p>
-</body>
-</html>
 
-<h2>My First Form</h2>
+  <h2>My First Form</h2>
+  <form action="/action_page.php" method="get">
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname" placeholder="Enter your first name"><br><br>
 
-<form action="/action_page.php" method="get">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" placeholder="Enter your first name"><br><br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname" placeholder="Enter your last name"><br><br>
 
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" placeholder="Enter your last name"><br><br>
+    <input type="submit" value="Submit">
+  </form>
 
-  <input type="submit" value="Submit">
-</form>
+  <h2>Favorite Language</h2>
+  <form action="/action_page.php" method="get">
+    <input type="radio" id="html" name="fav_language" value="HTML">
+    <label for="html">HTML</label><br>
 
-<h2>Favorite Language</h2>
+    <input type="radio" id="css" name="fav_language" value="CSS">
+    <label for="css">CSS</label><br>
 
-<form action="/action_page.php" method="get">
-  <input type="radio" id="html" name="fav_language" value="HTML">
-  <label for="html">HTML</label><br>
+    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+    <label for="javascript">JavaScript</label><br><br>
 
-  <input type="radio" id="css" name="fav_language" value="CSS">
-  <label for="css">CSS</label><br>
+    <input type="submit" value="Submit">
+  </form>
 
-  <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-  <label for="javascript">JavaScript</label><br><br>
-
-  <input type="submit" value="Submit">
-</form>
-
-<h2>Vehicles</h2>
-
-<form action="/action_page.php" method="get">
-  <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-  <label for="vehicle1"> I have a bike</label><br>
-
-  <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-  <label for="vehicle2"> I have a car</label><br>
-
-  <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-  <label for="vehicle3"> I have a boat</label><br><br>
-
-  <input type="submit" value="Submit">
-</form>
-
+  <h2>Vehicles</h2>
+  <form action="/action_page.php" method="get">
+    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+    <label for="vehicle1"> I have
